--- a/slides/cap_plm.tex
+++ b/slides/cap_plm.tex
@@ -90,10 +90,10 @@ Por ejemplo:
 
  
 \begin{align*}
-P(\text{``América''}|\text{``descrubrió'', ``Colón'', ``Cristóbal''}). \\
-P(\text{``Europa''}|\text{``descrubrió'', ``Colón'', ``Cristóbal''}). \\
-P(\text{``Chile''}|\text{``descrubrió'', ``Colón'', ``Cristóbal''}). \\
-P(\text{``camello''}|\text{``descrubrió'', ``Colón'', ``Cristóbal''}). \\
+P(\text{``América''}|\text{``descrubrió'', ``Colón'', ``Cristóbal''}) = 0.02 \\
+P(\text{``Europa''}|\text{``descrubrió'', ``Colón'', ``Cristóbal''}) = 0.01 \\
+P(\text{``Chile''}|\text{``descrubrió'', ``Colón'', ``Cristóbal''}) = 0.001\\
+P(\text{``camello''}|\text{``descrubrió'', ``Colón'', ``Cristóbal''}) = 0.00001 \\
 \ldots
 \end{align*}
 
