--- a/slides/apunte.tex
+++ b/slides/apunte.tex
@@ -48,7 +48,7 @@
         
         {\Huge\textbf{Procesamiento de Lenguaje Natural}} \\
         \vspace{0.5cm}
-        {\Large Apuntes de Clases} \\
+        {\Large Apuntes de Clases (Borrador)} \\
         \vspace{2cm}
         
         {\Large Felipe Bravo-Márquez} \\
